Add admin bookings design spec
